--- a/styles/architect.css
+++ b/styles/architect.css
@@ -8,3 +8,93 @@
   font-family: "Work Sans", sans-serif;
   font-weight: 400;
 }
+
+ /* shared style  */
+
+    .display-flex{
+        display: flex;
+    }
+
+    /* dark 02 */
+    .text-gray{
+        color: #424242;
+    }
+
+    /* dark 03 */
+    .text-greylight{
+        color: #727272;
+    }
+
+    .bg-light{
+        background-color: rgba(255, 144, 14, 0.1);
+    }
+
+    .btn-primary{
+        font-size: 1.25rem;
+        font-weight: 600;
+        color: white;
+        background-color: #FF900E;
+        padding: 20px 25px;
+        border: none;
+        border-radius: 8px;
+        margin-top: 32px;
+    }
+
+ /* header styles */
+
+ /* navber related styles */
+
+ .navbar, .banner{
+    max-width: 1440px;
+    margin: 0 auto;
+ }
+.navbar{
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 50px;
+}
+
+.brand{
+    font-size: 3rem;
+}
+
+.nav-links{
+    gap: 30px;
+}
+
+.nav-item{
+    list-style: none;
+}
+
+.link-icon{
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 18px;
+    color: #424242;
+}
+
+/* banner related styles */
+.banner-container{
+    max-width: 886px;
+    margin: 102px auto 33px auto;
+    text-align: center;
+}
+
+.banner-heading{
+    font-size: 4rem;
+    font-weight: 700;
+}
+.banner-description{
+    font-size: 1.12rem;
+}
+
+.banner-img{
+    width: 100%;
+}
+
+
+@media screen and (max-width:576px){
+    .navbar, .nav-links{
+        flex-direction: column;
+    }
+}
