--- a/styles/architect.css
+++ b/styles/architect.css
@@ -136,6 +136,39 @@ main > section{
     font-weight: 500;
 }
 
+/* some facts card styles */
+.fact-description{
+    width: 542px;
+}
+
+
+.fact-container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    margin: 100px 50px 180px 50px;
+}
+.fact-card{
+    border: 1px solid #FF900E;
+    height: 240px;
+    width: 240px;
+    border-radius: 8px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.fact-number{
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin: 10px 0 5px 0;
+    color: #424242;
+}
+
+.fact-paragraph{
+    font-size: 1.25rem;
+    font-weight: 600;
+    color: #727272;
+}
 
 
 
