--- a/styles/architect.css
+++ b/styles/architect.css
@@ -75,6 +75,7 @@
     padding-top: 50px;
     position: sticky;
     top: 0;
+    z-index: 1000;
 
 }
 
@@ -332,6 +333,10 @@ footer{
     margin: 50px 10px 70px 10px;
     text-align: center;
     padding: 30px 10px;
+}
+.navbar{
+    position: static;
+    top: 0;
 }
 
     
